--- a/.github/workflows/utitcase.yml
+++ b/.github/workflows/utitcase.yml
@@ -28,14 +28,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ '8', '11' ]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Set up JDK 11
+      - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: ${{ matrix.java }}
           distribution: 'adopt'
       - name: Build
         run: ./mvnw clean install -DskipTests
