--- a/.github/workflows/utitcase.yml
+++ b/.github/workflows/utitcase.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '11'
-          distribution: 'oracle'
+          distribution: 'adopt'
       - name: Build
         run: ./mvnw clean install -DskipTests
       - name: Test
