--- a/.github/workflows/utitcase.yml
+++ b/.github/workflows/utitcase.yml
@@ -33,10 +33,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Set up JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v1
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: 1.8
+      - name: Dependencies
+        run: ./mvnw dependency:tree
       - name: Build
         run: ./mvnw clean install -DskipTests
       - name: Test
