--- a/.github/workflows/e2e-tests-1.14-jdk11.yml
+++ b/.github/workflows/e2e-tests-1.14-jdk11.yml
@@ -24,7 +24,7 @@ on:
 
 jobs:
   build:
-    if: {{ contains(github.event.comment.html_url, '/pull/') && contains(github.event.comment.body, '/jdk11') }}
+    if: contains(github.event.comment.html_url, '/pull/')
     runs-on: ubuntu-latest
 
     steps:
