--- a/.github/workflows/e2e-tests-1.14-jdk11.yml
+++ b/.github/workflows/e2e-tests-1.14-jdk11.yml
@@ -24,14 +24,16 @@ on:
 
   # daily run
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "*/2 * * * *"
 
 env:
   JDK_VERSION: 11
 
 jobs:
   build:
-    if: contains(github.event.comment.html_url, '/pull/') && contains(github.event.comment.body, '/jdk11')
+    if: >-
+      github.event_name == 'schedule' ||
+      (contains(github.event.comment.html_url, '/pull/') && contains(github.event.comment.body, '/jdk11'))
     runs-on: ubuntu-latest
 
     steps:
